[gd_scene load_steps=3 format=3 uid="uid://b7nulb6tphbxj"]

[ext_resource type="Theme" uid="uid://cy0vw4fea4hnt" path="res://basictheme.tres" id="1_kmaf4"]
[ext_resource type="Script" path="res://prog_52a.gd" id="2_kef2e"]

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kmaf4")
script = ExtResource("2_kef2e")

[node name="lblLength" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 28.0
offset_right = 387.0
offset_bottom = 131.0
text = "Length:
"

[node name="lblWidth" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 163.0
offset_right = 378.0
offset_bottom = 256.0
text = "Width:
"

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 259.0
offset_right = 1084.0
offset_bottom = 367.0
text = "Area:
"

[node name="lblPerim" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 361.0
offset_right = 1085.0
offset_bottom = 469.0
text = "Perimeter:"

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 24.0
offset_right = 319.0
offset_bottom = 80.0
theme = ExtResource("1_kmaf4")

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 157.0
offset_right = 312.0
offset_bottom = 213.0
theme = ExtResource("1_kmaf4")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 501.0
offset_right = 273.0
offset_bottom = 583.0
theme = ExtResource("1_kmaf4")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 499.0
offset_right = 686.0
offset_bottom = 581.0
theme = ExtResource("1_kmaf4")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 842.0
offset_top = 499.0
offset_right = 1089.0
offset_bottom = 581.0
theme = ExtResource("1_kmaf4")
text = "Exit
"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
